# lnx

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  rustfmt.toml
engine/: Cargo.toml  build.rs
engine/datasets/stop_words/: de.txt  fr.txt  it.txt
engine/src/: correction.rs  document.rs  engine.rs  helpers.rs  index.rs  lib.rs  stop_words.rs  storage.rs  structures.rs
engine/src/index/: executor.rs  mod.rs  reader.rs  writer.rs
lnx/: Cargo.toml
lnx-block-store/: Cargo.toml
lnx-block-store/src/: compaction.rs  lib.rs  metastore.rs  metastore_wrapper.rs  reader.rs  recover.rs  service.rs  shard.rs
lnx-block-store/src/caches/: fifo.rs  lru.rs  mod.rs
lnx-block-store/src/writers/: blocking.rs  mod.rs
lnx-common/: Cargo.toml
lnx-common/src/: configuration.rs  lib.rs  test_utils.rs
lnx-common/src/fast_fuzzy/: mod.rs
lnx-common/src/index/: base.rs  context.rs  index.rs  micro_index.rs  mod.rs  polling.rs
lnx-common/src/schema/: boost.rs  error.rs  field.rs  field_info.rs  field_name.rs  mod.rs  options.rs  schema.rs  validations.rs  writer.rs
lnx-common/src/stop_words/: mod.rs
lnx-common/src/tokenizer/: mod.rs  simple.rs
lnx-common/src/types/: datetime.rs  mod.rs
lnx-controller/: Cargo.toml
lnx-controller/src/: backends.rs  engine.rs  indexes.rs  lib.rs
lnx-dfs/: Cargo.toml
lnx-document/: Cargo.toml  README.md
lnx-document/src/: block_builder.rs  block_reader.rs  decoder.rs  doc_block.rs  encoder.rs  helpers.rs  json_value.rs  lib.rs  rkyv_serializer.rs  serde_support.rs  serializer.rs  typed_value.rs  value.rs  wrappers.rs
lnx-document/src/reader/: json.rs  mod.rs  traverse.rs  view_access.rs
lnx-engine/: Cargo.toml
lnx-engine/aexecutor/: Cargo.toml
lnx-engine/aexecutor/src/: lib.rs  reader_executor.rs
lnx-engine/engine/: Cargo.toml
lnx-engine/engine/src/: lib.rs
lnx-engine/search-index/: Cargo.toml
lnx-engine/search-index/src/: corrections.rs  helpers.rs  index.rs  lib.rs  query.rs  reader.rs  schema.rs  snapshot.rs  stop_words.rs  storage.rs  structures.rs  synonyms.rs  tokenizer.rs  writer.rs
lnx-engine/src/: engine.rs  error.rs  index.rs  lib.rs
lnx-executor/: Cargo.toml
lnx-executor/src/: lib.rs  pools.rs  yielding.rs
lnx-indexer/: Cargo.toml
lnx-indexer/src/: clock.rs  document.rs  lib.rs  metastore.rs  ops.rs  pipeline.rs  queue.rs  tracker.rs
lnx-indexer/src/actors/: indexer.rs  mod.rs  timing.rs
lnx-indexer/src/directory/: memory.rs  mod.rs  readonly.rs  splitting.rs
lnx-indexer/src/document/: mod.rs  stack_str.rs  walker.rs
lnx-indexer/src/indexing_queue/: metastore.rs  mod.rs
lnx-io/: Cargo.toml
lnx-io/src/: file.rs  lib.rs  utils.rs
lnx-io/src/buffered/: mod.rs  runtime.rs  writer.rs
lnx-io/src/direct/: mod.rs  runtime.rs  writer.rs
lnx-io/src/yielding/: mod.rs  writer.rs
lnx-metastore/: Cargo.toml  README.md
lnx-metastore/src/: lib.rs  types.rs
lnx-metastore/src/backends/: mod.rs  scylladb.rs
lnx-metastore/src/tables/: generic-cassandra.cql  generic-postgresql.sql  generic-sqlite.sql
lnx-query/: Cargo.toml
lnx-query/samples/: basic.js  query.js
lnx-query/src/: builder.rs  lib.rs
lnx-query/src/query_structure/: base.rs  fast_fuzzy.rs  fuzzy.rs  mod.rs  range.rs  selector.rs  term_value.rs
lnx-reader/: Cargo.toml
lnx-reader/src/: deletes.rs  lib.rs  segment.rs
lnx-segments/: Cargo.toml  DESIGN.md
lnx-segments/src/: deletes.rs  lib.rs  meta_merger.rs  metadata.rs  selector.rs
lnx-segments/src/aio/: combiner.rs  exporter.rs  mod.rs  runtime.rs  selector.rs  utils.rs
lnx-segments/src/blocking/: combiner.rs  exporter.rs  mod.rs  utils.rs
lnx-server/: Cargo.toml
lnx-server/src/: auth.rs  error.rs  helpers.rs  main.rs  responders.rs  snapshot.rs  state.rs
lnx-server/src/routes/: auth.rs  default_handlers.rs  engine.rs  index.rs  mod.rs
lnx-storage/: Cargo.toml  README.md
lnx-storage/src/: base.rs  base_stores.rs  bytes.rs  change_log.rs  configure.rs  distributor.rs  doc_store.rs  engine_store.rs  error.rs  lib.rs  listeners.rs  loader.rs  manager.rs  meta_store.rs  metadata.rs  metastore.rs  polling.rs  readonly.rs  resolvers.rs  rpc.rs  store.rs  stores.rs  writer.rs
lnx-storage/src/fragments/: block.rs  block_writer.rs  mod.rs  reader.rs  writer.rs
lnx-storage/src/impls/: mod.rs
lnx-storage/src/templates/: change_log.rs  doc_store.rs  engine_store.rs  meta_store.rs  mod.rs  setup.rs
lnx-storage/src/tests/: block_replication.rs  fragment_read.rs  fragment_replication.rs  kv_ops.rs  mod.rs  recovery.rs
lnx-storage/src/types/: mod.rs  timestamp.rs
lnx-tantivy/: Cargo.toml  README.md
lnx-tantivy/src/: doc_ids.rs  index.rs  indexer.rs  lib.rs  realtime_reader.rs  threadpool.rs
lnx-tantivy/src/directory/: memory.rs  mod.rs  readonly.rs  splitting.rs
lnx-testing/: Cargo.toml
lnx-testing/src/: main.rs
lnx-tools/: Cargo.toml
lnx-tools/src/: binary_fuse.rs  files.rs  hashers.rs  kill_switch.rs  lib.rs  limiter.rs  supervisor.rs
lnx-transforms/: Cargo.toml  README.md
lnx-transforms/src/: flatten.rs  lib.rs  op_codes.rs  pipeline.rs  type_cast.rs  vm.rs
lnx-transforms/src/transformers/: mod.rs  type_cast.rs  type_filter.rs
lnx-utils/: Cargo.toml
lnx-utils/src/: bytes.rs  index.rs  json.rs  lib.rs  validators.rs
lnx-utils/src/executors/: mod.rs  pool.rs  search.rs
lnx-writer/: Cargo.toml
lnx-writer/src/: clock.rs  doc_handler.rs  error.rs  finalizer.rs  handler.rs  indexer.rs  lib.rs  poller.rs  writer.rs
lnx-writer/src/handler/: add_docs.rs  batcher.rs  mod.rs  remove_docs.rs  update_docs.rs
lnx-writer/src/helpers/: handle.rs  mod.rs  serde.rs
lnx-writer/src/indexer/: configure.rs  indexers.rs  mod.rs  task_handler.rs
lnx-writer/tests/: basic_indexing.rs  segment_flushing.rs
lnx/src/: main.rs
lnxcli/: Cargo.toml
lnxcli/benchmark/: Cargo.toml
lnxcli/benchmark/src/: lib.rs  (+4 more)
lnxcli/demo/: Cargo.toml
lnxcli/src/: main.rs
lnxcli/test-accuracy/: Cargo.toml
performance-tests/: Cargo.toml
performance-tests/src/: main.rs
search-engine/search-index/: Cargo.toml  build.rs
(+186 files in other folders)
