[package]
name = "lnx"
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace.dependencies]
anyhow = "1"
arc-swap = "1.6.0"
async-trait = "0.1.68"
ahash = "0.8.3"
base64 = "0.21.2"
crc32fast = "1.3.2"
cityhasher = "0.1.0"
exponential-backoff = "1.2.0"
futures = "0.3.28"
flume = "0.10.14"
serde_json = "1"
smallvec = "1.10.0"
itoa = "1"
thiserror = "1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
parking_lot = "0.12.1"
num_cpus = "1.15.0"
rayon = "1.7.0"
ryu = "1"
hashbrown = "0.13.2"
memmap2 = "0.6.2"

tantivy = { git = "https://github.com/ChillFish8/tantivy.git", branch = "add-doc-as-trait-v2" }
tokio = { version = "1.28.2", features = ["full"] }
heed = { version = "0.20.0-alpha.0", default-features = false }
time = { version = "0.3.21", features = ["parsing", "formatting"] }
serde = { version = "1", features = ["derive"] }
rkyv = { version = "0.7.42", features = ["strict", "validation"] }
lz4_flex = { version = "0.11", default-features = false, features = ["std"] }
datacake = { version = "0.7.1", git = "https://github.com/lnx-search/datacake.git" }

[workspace]
members = [
    "lnx-document",
    "lnx-transforms",
    "lnx-block-store",
    "lnx-metastore",
    "lnx-executor",
    "lnx-tools",
    "lnx-replica",
    "lnx-schema",
    "lnx-indexer",
]