[package]
name = "lnx"
version = "0.10.0"
edition = "2021"
description = "Lightning fast search at any scale."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lnx-tantivy = { path = "lnx-tantivy" }

anyhow = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }


[workspace.dependencies]
anyhow = "1"
arc-swap = "1.6.0"
async-trait = "0.1.68"
ahash = "0.8.3"
base64 = "0.21.2"
bytes = "1"
crc32fast = "1.3.2"
cityhasher = "0.1.0"
dashmap = "5.4.0"
exponential-backoff = "1.2.0"
futures = "0.3.28"
flume = "0.10.14"
glommio = "0.8.0"
serde_json = "1"
smallvec = "1.10.0"
itoa = "1"
thiserror = "1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
parking_lot = "0.12.1"
num_cpus = "1.15.0"
rayon = "1.7.0"
ryu = "1"
rand = "0.8.5"
hashbrown = "0.13.2"
memmap2 = "0.6.2"
moka = "0.11"
stable_deref_trait = "1.2.0"

# Metastore backends
scylla = "0.9.0"
tokio-postgres = "0.7.10"
rusqlite = { version = "0.29.0", features = ["modern_sqlite"] }

tantivy = { git = "https://github.com/ChillFish8/tantivy.git", branch = "lnx" }
tantivy-common = { git = "https://github.com/ChillFish8/tantivy.git", branch = "lnx" }
tokio = { version = "1.28.2", features = ["full"] }
time = { version = "0.3.21", features = ["parsing", "formatting"] }
serde = { version = "1", features = ["derive"] }
rkyv = { version = "0.7.42", features = ["strict", "validation", "archive_le"] }
lz4_flex = { version = "0.11", features = ["std"] }
datacake = { version = "0.8", default-features = false, features = ["datacake-crdt", "datacake-node", "datacake-rpc", "rkyv"], git = "https://github.com/lnx-search/datacake.git" }
mimalloc = { version = "0.1", default-features = false }
clap = { version = "4", features = ["derive", "env"] }

[workspace]
members = [
    "lnx-executor",
    "lnx-tools",
    "lnx-tantivy",
    "lnx-testing",
    "lnx-metastore",
    "lnx-io"
]