[package]
name = "engine"
version = "0.1.0"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["sync"] }
hashbrown = { version = "0.11", features = ["serde"] }

log = "0.4"
async-channel = "1.6"
tantivy = "0.15"
evmap = "10"
ahash = "0.7"
parking_lot = "0.11"
slab = "0.4"
anyhow = "1"