[package]
name = "engine"
version = "0.1.1"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["sync", "fs"] }
hashbrown = { version = "0.11", features = ["serde"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
symspell = { git = "https://github.com/ChillFish8/symspell", branch = "master" }

serde_json = "1"
num_cpus = "1.13"
rayon = "1.5"
crossbeam = "0.8"
log = "0.4"
async-channel = "1.6"
tantivy = "0.16"
ahash = "0.7"
parking_lot = "0.11"
anyhow = "1"
base64 = "0.13"
regex = "1.5"
lazy_static = "1.4.0"
once_cell = "1.8"
itertools = "0.10"
flate2 = "1.0.20"

[build-dependencies]
flate2 = "1.0.20"
anyhow = "1"