[package]
name = "lnx-block-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lnx-document = { path = "../lnx-document" }
lnx-metastore = { path = "../lnx-metastore" }
lnx-executor = { path = "../lnx-executor" }
lnx-tools = { path = "../lnx-tools" }

anyhow = { workspace = true }
async-trait = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
lz4_flex = { workspace = true }
rkyv = { workspace = true }
memmap2 = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }