[package]
name = "lnx-block-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lnx-document = { path = "../lnx-document" }
lnx-metastore = { path = "../lnx-metastore" }

anyhow = { workspace = true }
ahash = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
lz4_flex = { workspace = true }
yorick = { workspace = true }
moka = { workspace = true }
num_cpus = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
smallvec = { workspace = true }
rkyv = { workspace = true }

[features]
direct-io = ["yorick/direct-io-backend"]