[package]
name = "lnx-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy = "0.18.0"
serde_json = "1"
bytecheck = "0.6.9"

utoipa = { version = "2.2.0", features = ["json"] }
validator = { version = "0.15", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
rkyv = { version = "0.7", features = ["validation"] }

[features]
test-utils = []
