[package]
name = "lnx-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { workspace = true }
bytecheck = { workspace = true }
num_cpus = { workspace = true }
parse-size = { workspace = true }
humansize = { workspace = true }
humantime = { workspace = true }
hashbrown = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
serde = { workspace = true }
rkyv = { workspace = true }
tantivy = { workspace = true }

[features]
test-utils = []
