[package]
name = "lnx-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lnx-storage = { path = "../lnx-storage" }
lnx-common = { path = "../lnx-common" }

scylladb-backend = { path = "../storage-backends/scylladb-backend" }

serde = { version = "1", features = ["derive"] }

anyhow = "1"
serde_json = "1"
once_cell = "1.10.0"
dashmap = "5.1.0"
