[package]
name = "lnx-dfs"
version = "0.1.0"
edition = "2021"
description = "The lnx distributed file system layer."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lnx-metastore = { path = "../lnx-metastore" }

anyhow = { workspace = true }
tokio = { workspace = true }