[package]
name = "lnx-document"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rkyv = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
anyhow = { workspace = true }
crc32fast = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
serde_json = "1.0.96"
tracing-subscriber = "0.3.17"
tracing = "0.1"
lz4_flex = { workspace = true }