[package]
name = "lnx-document"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rkyv = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
anyhow = { workspace = true }
crc32fast = { workspace = true }
tantivy = { workspace = true }
base64 = { workspace = true }
itoa = { workspace = true }
ryu = { workspace = true }

[dev-dependencies]
serde_json = "1.0.96"