[package]
name = "lnx-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lnx-common = { path = "../lnx-common" }
lnx-utils = { path = "../lnx-utils" }
lnx-writer = { path = "../lnx-writer" }
lnx-storage = { path = "../lnx-storage" }

tokio = { version = "1", features = ["fs"] }
tantivy = { git = "https://github.com/quickwit-oss/tantivy.git", rev = "13a4473" }

tracing = "0.1.30"
tracing-futures = "0.2.5"
hashbrown = "0.12.0"
anyhow = "1.0.53"
thiserror = "1.0.30"