[package]
name = "lnx-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lnx-tools = { path = "../lnx-tools" }
lnx-document = { path = "../lnx-document" }
lnx-schema = { path = "../lnx-schema" }
lnx-executor = { path = "../lnx-executor" }
lnx-metastore = { path = "../lnx-metastore" }

tracing = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tantivy = { workspace = true }
parking_lot = { workspace = true }
flume = { workspace = true }
smallvec = { workspace = true }
exponential-backoff = { workspace = true }
yorick = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
rkyv = { workspace = true }