[package]
name = "lnx-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

glommio = { workspace = true, optional = true }


[features]
directio = ["glommio"]