[package]
name = "lnx-metastore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
scylla = { workspace = true }
sqlx = { workspace = true }
