[package]
name = "lnx"
version = "0.8.0"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "rt", "signal"] }
fern = { version = "0.6", features = ["colored"] }
chrono = { version = "0.4", features = ["serde"] }
hashbrown = { version = "0.11", features = ["serde"] }
hyper = { version = "0.14", features = ["server", "http1", "http2"] }
sled = { version = "0.34.7", features = ["compression"] }
tracing-subscriber = { version = "0.3.5", features = ["tracing-log", "parking_lot"] }

tracing-appender = "0.2.0"
tracing-opentelemetry = "0.16.0"
tracing = "0.1.29"
tracing-futures = "0.2.5"
thiserror = "1.0.30"
routerify = "2.2.0"
arc-swap = "1.4.0"
bincode = "1.3"
structopt = "0.3"
anyhow = "1"
num_cpus = "1.13"
bytes = "1"
serde_json = "1"
headers = "0.3.4"
parking_lot = "0.11"
rand = "0.8.4"

# allocator
mimalloc = { version = "*", default-features = false }

engine = { path = "../lnx-engine/engine" }
