[package]
name = "lnx-writer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
bytecheck = { workspace = true }
cityhash-sys = { workspace = true }
datacake = { workspace = true }
datacake-lmdb = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
jocky = { workspace = true }
puppet = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
flume = { workspace = true }
ownedbytes = { workspace = true }
memmap2 = { workspace = true }
smallvec = { workspace = true }
stable_deref_trait = { workspace = true }
zstd = { workspace = true }
once_cell = { workspace = true }
hashbrown = { workspace = true }
hyper = { workspace = true }
rkyv = { workspace = true }
parking_lot = { workspace = true }
crc32fast = { workspace = true }
exponential-backoff = { workspace = true }

lnx-io = { path = "../lnx-io" }
lnx-executor = { path = "../lnx-executor" }

deunicode = "1.3.3"