[package]
name = "lnx-tantivy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lnx-tools = { path = "../lnx-tools" }
lnx-metastore = { path = "../lnx-metastore" }

ahash = { workspace = true }
bytes = { workspace = true }
datacake = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tantivy = { workspace = true }
tantivy-common = { workspace = true }
parking_lot = { workspace = true }
smallvec = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
stable_deref_trait = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
rkyv = { workspace = true }