[package]
name = "lnx-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lnx-tools = { path = "../lnx-tools" }

cityhasher = { workspace = true }
rand = "0.8.5"
anyhow = "1"
mimalloc = { workspace = true }