[package]
name = "lnx-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cityhasher = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
exponential-backoff = { workspace = true }
anyhow = { workspace = true }