[package]
name = "lnx-transforms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lnx-document = { path = "../lnx-document" }

thiserror = { workspace = true }
anyhow = { workspace = true }
smallvec = { workspace = true }
time = { workspace = true }
ryu = { workspace = true }
itoa = { workspace = true }
base64 = { workspace = true }
hashbrown = { workspace = true }
tantivy = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

