[package]
name = "lnx-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy = { git = "https://github.com/quickwit-oss/tantivy.git", rev = "13a4473" }

tracing = "0.1.30"
bincode = "2.0.0-beta.3"
serde = "1"
crc32fast = "1.3.2"
serde_json = "1.0.79"