[package]
name = "lnx-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["sync"] }

tantivy = "0.17"
rayon = "1.5.1"
tracing = "0.1.30"
bincode = "2.0.0-beta.3"
serde = "1"
serde_json = "1.0.79"
async-channel = "1.6.1"
anyhow = "1"
thiserror = "1.0.30"