[package]
name = "lnx-writer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lnx-storage = { path = "../lnx-storage" }
lnx-utils = { path = "../lnx-utils" }
lnx-common = { path = "../lnx-common" }
lnx-controller = { path = "../lnx-controller" }

serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["sync", "rt" ,"time"] }
uuid = { version = "0.8.2", features = ["v4"] }

tantivy = "0.17"
async-channel = "1.6.0"
bincode = "2.0.0-beta.3"
itertools = "0.10.3"
once_cell = "1.9.0"
hashbrown = "0.12.0"
thiserror = "1.0.30"
anyhow = "1.0.53"
tracing = "0.1.30"
tracing-futures = "0.2.5"
num_cpus = "1.13.1"
