[package]
name = "lnx-writer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy = "0.18.0"
tracing = "0.1.36"
tracing-futures = "0.2.5"
thiserror = "1"
flume = "0.10.14"
datacake-crdt = "0.1.2"
once_cell = "1.15.0"
humansize = "2.1.0"

uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["sync", "time", "rt"] }

lnx-common = { path = "../lnx-common" }
lnx-segments = { path = "../lnx-segments" }
lnx-storage = { path = "../lnx-storage" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.15"

lnx-common = { path = "../lnx-common", features = ["test-utils"] }
lnx-segments = { path = "../lnx-segments", features = ["test-runtime"] }