[package]
name = "aexecutor"
version = "0.1.0"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.6.1"
anyhow = "1"
rayon = "1.5.1"
tantivy = "0.18.0"
crossbeam = "0.8"
tokio = { version = "1.11", features = ["sync"] }