[package]
name = "search-index"
version = "0.1.0"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { version = "0.8.1", default-features = false, features = ["crossbeam-channel", "crossbeam-queue"] }
time = { version = "0.3.9", features = ["serde", "parsing", "formatting"] }
serde = { version = "1", features = ["derive"] }
sled = { version = "0.34.7", features = ["compression"] }
hashbrown = { version = "0.11", features = ["serde"] }
tokio = { version = "1.12", features = ["sync", "fs", "rt"] }
symspell = { git = "https://github.com/lnx-search/symspell", tag = "v0.5.0" }
tantivy-utils = { git = "https://github.com/lnx-search/tantivy-utils.git", tag = "0.1.0" }

tantivy = "0.18.0"
tracing = "0.1.29"
tracing-futures = "0.2.5"
crc32fast = "1.3.0"
bincode = "1.3"
rand = "0.8.4"
async-channel = "1.6.1"
once_cell = "1.8"
anyhow = "1"
flate2 = "1.0.20"
arc-swap = "1.4.0"
num_cpus = "1"
sysinfo = "0.20.5"

aexecutor = { path = "../aexecutor" }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1.12", features = ["full"] }
pretty_env_logger = "0.4.0"

[build-dependencies]
flate2 = "1.0.20"
anyhow = "1"