[package]
name = "search-index"
version = "0.1.0"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
hashbrown = { version = "0.11", features = ["serde"] }
symspell = { git = "https://github.com/ChillFish8/symspell", branch = "0.6.0" }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.12", features = ["sync", "fs", "rt"] }

lzzzz = "0.8"
bincode = "1.3"
rand = "0.8.4"
async-channel = "1.6.1"
crossbeam = "0.8.1"
once_cell = "1.8"
anyhow = "1"
tantivy = "0.16"
flate2 = "1.0.20"
log = "0.4"
arc-swap = "1.4.0"

aexecutor = { path = "../aexecutor" }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1.12", features = ["full"] }
pretty_env_logger = "0.4.0"

[build-dependencies]
flate2 = "1.0.20"
anyhow = "1"